syntax = "proto3";

package laptop;

option go_package = ".;___laptop";

import "laptop.proto";

message CreateLaptopRequest{
    Laptop laptop = 1;
}

message CreateLaptopResponse{
    Laptop laptop = 1;
}


service LaptopService{
    rpc CreateLaptop(CreateLaptopRequest) returns (CreateLaptopResponse) {}
}